YTDB-661 Address review findings for traversal memoization cache